--- a/home/package.json
+++ b/home/package.json
@@ -24,18 +24,20 @@
     "autoprefixer": "^10.1.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
+    "dotenv-webpack": "^8.0.1",
     "html-webpack-plugin": "^5.3.2",
     "postcss": "^8.2.1",
     "postcss-loader": "^4.1.0",
+    "sass": "^1.79.1",
     "style-loader": "^3.3.0",
     "typescript": "^4.5.2",
     "webpack": "^5.57.1",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.3.1",
-    "dotenv-webpack": "^8.0.1"
+    "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.1.13"
   }
 }
