--- a/home/package.json
+++ b/home/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.26.2",
     "styled-components": "^6.1.13"
   }
 }
