--- a/home/package.json
+++ b/home/package.json
@@ -6,7 +6,8 @@
     "build:dev": "webpack --mode development",
     "build:start": "cd dist && PORT=9000 npx serve",
     "start": "webpack serve --mode development",
-    "start:live": "webpack serve --mode development --live-reload --hot"
+    "start:live": "webpack serve --mode development --live-reload --hot",
+    "test": "jest"
   },
   "license": "MIT",
   "author": {
@@ -16,20 +17,33 @@
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/plugin-transform-runtime": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.10.4",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.13",
+    "@types/node": "^22.5.5",
+    "@types/react": "^18.3.7",
+    "@types/react-dom": "^18.3.0",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "autoprefixer": "^10.1.0",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
     "dotenv-webpack": "^8.1.0",
+    "eslint-plugin-jest": "^28.8.3",
     "html-webpack-plugin": "^5.3.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.2.1",
     "postcss-loader": "^4.1.0",
+    "react-test-renderer": "^18.3.1",
     "sass": "^1.79.1",
     "style-loader": "^3.3.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^4.5.2",
     "webpack": "^5.57.1",
     "webpack-cli": "^4.10.0",
@@ -39,6 +53,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.2",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "ts-node": "^10.9.2"
   }
 }
