--- a/details/package.json
+++ b/details/package.json
@@ -6,7 +6,8 @@
     "build:dev": "webpack --mode development",
     "build:start": "cd dist && PORT=9001 npx serve",
     "start": "webpack serve --mode development",
-    "start:live": "webpack serve --mode development --live-reload --hot"
+    "start:live": "webpack serve --mode development --live-reload --hot",
+    "test": "jest"
   },
   "license": "MIT",
   "author": {
@@ -16,18 +17,26 @@
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/plugin-transform-runtime": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.10.4",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.0.1",
+    "@types/jest": "^29.5.13",
+    "@types/react": "^18.3.7",
+    "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.1.0",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
     "dotenv-webpack": "^8.0.1",
+    "eslint-plugin-jest": "^28.8.3",
     "html-webpack-plugin": "^5.3.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.2.1",
     "postcss-loader": "^4.1.0",
+    "react-test-renderer": "^18.3.1",
     "sass": "^1.79.1",
     "style-loader": "^3.3.0",
     "typescript": "^4.5.2",
